# usenexus

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.python
docs/: local-development.md
evals/: run_ragas.py
evals/golden/: sample.json
infra/docker/: prometheus.yml
scripts/: seed_local_data.py  smoke_local.py  verify_migrations.py
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial_schema.py  0002_database_hardening.py
services/api/nexus_api/: __init__.py  dependencies.py  errors.py  main.py
services/api/nexus_api/middleware/: auth.py  rate_limit.py
services/api/nexus_api/routers/: connections.py  documents.py  health.py  keys.py  organizations.py  query.py  webhooks.py
services/connectors/: pyproject.toml
services/connectors/nexus_connectors/: __init__.py  registry.py
services/connectors/nexus_connectors/google_drive/: __init__.py  connector.py
services/ingestion/: pyproject.toml
services/ingestion/nexus_ingestion/: __init__.py  consumer.py  credentials.py  pipeline.py
services/scheduler/: pyproject.toml
services/scheduler/nexus_scheduler/: __init__.py  main.py
services/worker/: pyproject.toml
services/worker/nexus_worker/: __init__.py  celery_app.py
services/worker/nexus_worker/tasks/: cleanup.py  full_sync.py
tests/integration/: test_pipeline.py
tests/unit/: test_api_foundation.py  test_chunker.py  test_database_hardening.py  test_google_drive_connector.py  test_ingestion_pipeline.py  test_retrieval.py  test_webhooks_router.py
website/: package-lock.json  package.json  tailwind.config.ts
website/app/: globals.css  layout.tsx  page.tsx
website/components/site/: data.ts  icons.tsx  interactive-sections.tsx  marketing-page.tsx  site-motion.tsx
website/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  textarea.tsx
