[project]
name = "nexus-connectors"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "nexus-core",
    "pdfminer.six>=20231228",
]

[tool.uv.sources]
nexus-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_connectors"]
