[project]
name = "nexus-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10",
    "elasticsearch[async]>=8.13",
    "httpx>=0.27",
    "nexus-chunker",
    "nexus-connectors",
    "nexus-core",
    "openai>=1.35",
    "qdrant-client>=1.9",
    "redis[hiredis]>=5.0",
]

[tool.uv.sources]
nexus-chunker = { workspace = true }
nexus-connectors = { workspace = true }
nexus-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_ingestion"]
