[project]
name = "nexus-scheduler"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10",
    "nexus-core",
    "redis[hiredis]>=5.0",
]

[tool.uv.sources]
nexus-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_scheduler"]
