[project]
name = "nexus-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.4",
    "elasticsearch[async]>=8.13",
    "nexus-connectors",
    "nexus-core",
    "nexus-ingestion",
    "qdrant-client>=1.9",
    "redis[hiredis]>=5.0",
]

[tool.uv.sources]
nexus-connectors = { workspace = true }
nexus-core = { workspace = true }
nexus-ingestion = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nexus_worker"]
